Revert "Also initialize secrets for non-demo profile"
This reverts commit 850e337e49e4ab45158879bfb7d113b10f121c50.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -350,6 +350,8 @@ services:
   secret-init:
     image: alpine:latest
     command: "/bin/sh -c 'if [ ! -f /tmp/secret/secret.key ]; then head -c 32 /dev/urandom > /tmp/secret/secret.key; fi'"
+    profiles:
+      - demo
     volumes:
       - "secret-data:/tmp/secret"
     restart: on-failure
