Increase max.poll.interval.ms to support longer processing times

--- a/repository-meta-analyzer/src/main/resources/application.properties
+++ b/repository-meta-analyzer/src/main/resources/application.properties
@@ -89,6 +89,19 @@ kafka-streams.num.stream.threads=3
 # @hidden
 kafka-streams.compression.type=snappy
 
+
+# Refer to <https://kafka.apache.org/documentation/#consumerconfigs_max.poll.interval.ms> for details.
+# Set max poll() interval to 10 minutes due to longer processing time.
+#
+# @category:     Kafka
+# @type:         int
+# @valid-values: [1, ...]
+kafka-streams.consumer.max.poll.interval.ms=600000
+
+# In case of further issues:
+# Possibly also reduce batch size to minimize processing time per poll
+# i.e.: kafka-streams.consumer.max.poll.records=100
+
 # @category: Kafka
 # @hidden
 quarkus.kafka.snappy.enabled=true
